--- a/html-sources/reservation.html
+++ b/html-sources/reservation.html
@@ -9,8 +9,14 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.2.0/dist/css/datepicker-bs5.min.css">
         <link rel="stylesheet" href="sweetalert2.min.css">
-        <!-- <link rel="stylesheet" type ="text/css" href="static/css/styles.css"> -->
-
+        <link rel="stylesheet" href="static/css/styles.css">
+        
+        <style>
+          .btn-outline-secondary {
+                color: #6c757d;
+                border-color: #6c757d;
+              } 
+        </style>
       </head>
         <body>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
